@@ -24,7 +24,7 @@ You should have received a copy of the GNU General Public License along with
 yoshimi; if not, write to the Free Software Foundation, Inc., 51 Franklin
 Street, Fifth Floor, Boston, MA  02110-1301, USA.
 
-Modified April 2017} {in_source in_header
+Modified May 2017} {selected in_source in_header
 }
 
 decl {\#include <FL/fl_ask.H>
@@ -276,7 +276,7 @@ end();} {}
   }
 }
 
-class MidiLearnUI {selected : {private MiscFuncs}
+class MidiLearnUI {: {private MiscFuncs}
 } {
   Function {make_window()} {} {
     Fl_Window midilearnwindow {
@@ -284,6 +284,7 @@ class MidiLearnUI {selected : {private MiscFuncs}
       tooltip {Editor for all learned controllers.
 CTRL-right click on any knob/slider to learn.
 Note: Adding/deleting entries or changing CC/Chan will renumber the lines.} xywh {7 694 820 285} type Double hide
+      code0 {send_data(22, 0, 3);}
     } {
       Fl_Scroll kitlist {
         tooltip {Editor for all learned controllers.
